The weather api

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-VISUAL_CROSSING_API_KEY=your_api_key_here
+VISUAL_CROSSING_API_KEY=37ADLNHRS7U8BVRC572UVPXLF
+
+
 REDIS_HOST=localhost
-REDIS_PORT=6379
+REDIS_PORT=6380
+REDIS_DB=0
+REDIS_PASSWORD=
